--- a/JavaApplication81/nbproject/project.properties
+++ b/JavaApplication81/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/JavaApplication81.jar
+dist.jar=${dist.dir}/Taller_04.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/JavaApplication81
+dist.jlink.output=${dist.jlink.dir}/Taller_04
 excludes=
 includes=**
 jar.compress=false
@@ -70,7 +70,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=JavaApplication81
+jlink.launcher.name=Taller_04
 main.class=javaapplication81.JavaApplication81
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
